# portfolio

./: .gitmodules  pyproject.toml
app/: home.py
app/pages/: 1_about.py  2_Entity_Extraction_Tool.py  2_data_analysis.py  3_contact.py  4_chatbot.py  5_Travel_Agent.py
src/: auth_config.yaml
