[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["ggaray <ggaray@mrhouston.net>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.42.0"
streamlit-authenticator = "^0.4.1"
authlib = "^1.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
