[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["ggaray <ggaray@mrhouston.net>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.42.0"
streamlit-authenticator = "^0.4.1"
authlib = "^1.4.1"
st-annotated-text = "^4.0.2"
pdfplumber = "^0.11.5"
streamlit-annotation-tools = "^1.0.1"
streamlit-text-label = "^0.1.2"
st-ner-annotate = "^0.1.0"
st-copy-to-clipboard = "^0.1.6"
huggingface-hub = "^0.29.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
